# openwebui-honcho

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_plugins.py  install.py  migrate.py
src/openwebui_honcho/: __init__.py  actions_plugin.py  core.py  filter_plugin.py  tools_plugin.py
tests/: test_core.py  test_plugins.py  test_telemetry.py
